--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
       content="Component Explorer for Arknights: Endfield Design System"
     />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Endfield Design System v2.0" />
+    <meta
+      name="twitter:description"
+      content="Component Explorer for Arknights: Endfield Design System"
+    />
+    <meta name="twitter:image" content="/og-image.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
