feat: npm library build, installation docs, SEO/a11y fixes
- Add library build infrastructure (vite.lib.config.ts, tsconfig.lib.json)
- Create barrel exports (src/components/ui/index.ts)
- Add CSS variables (src/styles/variables.css) and Tailwind preset
- Add Installation section with full E2E setup guide
- Publish reend-components@0.1.0 to npm
- SEO: lang=en, canonical URL, JSON-LD, favicon links, sitemap
- A11y: skip-nav, aria-labels, focus visibility, heading hierarchy
- Security: _headers with CSP, X-Frame-Options, Permissions-Policy
- Decouple sonner.tsx from docs ThemeProvider
- Fix @/ aliases to relative imports in UI components

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="id" class="dark">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,22 +8,35 @@
       name="description"
       content="Complete Design System Reference — Sci-Fi Industrial Futurism component library."
     />
-    <meta property="og:title" content="Endfield Design System v2.0" />
+    <meta
+      property="og:title"
+      content="ReEnd-Components — Endfield Design System"
+    />
     <meta
       property="og:description"
-      content="Component Explorer for Arknights: Endfield Design System"
+      content="Arknights: Endfield inspired React component library with Tailwind CSS"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:url" content="https://reend-components.pages.dev" />
+    <meta
+      property="og:image"
+      content="https://reend-components.pages.dev/android-chrome-512x512.png"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Endfield Design System v2.0" />
+    <meta
+      name="twitter:title"
+      content="ReEnd-Components — Endfield Design System"
+    />
     <meta
       name="twitter:description"
-      content="Component Explorer for Arknights: Endfield Design System"
+      content="Arknights: Endfield inspired React component library with Tailwind CSS"
     />
-    <meta name="twitter:image" content="/og-image.svg" />
+    <meta
+      name="twitter:image"
+      content="https://reend-components.pages.dev/android-chrome-512x512.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,6 +44,32 @@
       rel="stylesheet"
     />
     <meta name="theme-color" content="#0a0a0f" />
+    <link rel="canonical" href="https://reend-components.pages.dev" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "ReEnd-Components",
+        "description": "Arknights: Endfield inspired React component library with Tailwind CSS. Sci-Fi Industrial Futurism design system.",
+        "url": "https://reend-components.pages.dev",
+        "applicationCategory": "DesignApplication",
+        "operatingSystem": "Web",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "author": {
+          "@type": "Organization",
+          "name": "ReEnd Contributors",
+          "url": "https://github.com/VBeatDead/ReEnd-Components"
+        },
+        "license": "https://opensource.org/licenses/MIT"
+      }
+    </script>
     <script>
       (function () {
         var t = localStorage.getItem("ef-theme");
