feat(localization): add English and Indonesian translations for design system components and pages
- Created localization files for English and Indonesian languages including common, docs, feedback, foundations, and more.
- Implemented translation hooks in various components to support dynamic language switching.
- Updated navigation and error handling pages to utilize localized strings for better user experience.
- Added a changelog section to the documentation sidebar.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
     />
     <meta name="theme-color" content="#0a0a0f" />
     <link rel="canonical" href="https://reend-components.pages.dev" />
+    <link
+      rel="alternate"
+      hreflang="en"
+      href="https://reend-components.pages.dev/en"
+    />
+    <link
+      rel="alternate"
+      hreflang="id"
+      href="https://reend-components.pages.dev/id"
+    />
+    <link
+      rel="alternate"
+      hreflang="x-default"
+      href="https://reend-components.pages.dev/en"
+    />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
